Fix header on mobile devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -307,7 +307,6 @@ a {
   text-align: center;
 
   .landing-inner {
-    min-width: 375px;
     max-width: 95%;
     margin: 0 auto;
     padding: 0.75rem;
